fix date alignment

--- a/components/sass/go-content-stats.scss
+++ b/components/sass/go-content-stats.scss
@@ -227,9 +227,9 @@ $global-radius: 4px;
 			}
 		}
 
-		.stat-summary .day,
+		.stat-summary .item,
 		.stat-summary .posts,
-		.day,
+		.item,
 		.posts {
 			text-align: center;
 		}
